apps/beep-auth/development/scope-1/Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: beep-auth
  namespace: beep-auth-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beep-auth
  template:
    metadata:
      labels:
        app: beep-auth
    spec:
      containers:
        - name: beep-auth
          image: 104.248.9.67:5000/beep-auth:master-faeda38-v.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 1
              memory: 1Gi
      nodeSelector:
        workload: "mitcr-apps"
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "mitcr-apps"
          effect: "NoSchedule"
  strategy:
    canary: {}
